# L-MARS

./: .env.example  .gitignore  README.md  example_usage.py  main.py  push_to_hf.py  pyproject.toml  requirements.txt  run_streamlit.py  streamlit_app.py  test_multiagent.py
app/: README.md  __init__.py  components.py  config.py  main.py  requirements.txt  utils.py
baselines/: qwen_runner.py  run_baseline.py
config/: eval.yaml  retriever.yaml
data/: barexam_qa.csv  legalsearchqa.json
data/lexam/: README.md  __init__.py  loader.py  toy.jsonl
eval/: README.md  __init__.py  ablation_deep.py  ablation_topk.py  analyze_results.py  api_utils.py  cache_generator.py  compute_metrics.py  config.py  data_loader.py  eval_claude.py  eval_gemini.py  eval_multiturn_lmars_mcq.py  eval_oai.py  eval_simple_lmars_mcq.py  evaluate.py  infer_base_llm.py  infer_multiturn_lmars.py  infer_simple_lmars.py  lmars_eval.py  optimize_prompt.py  prompts.py  rate_limit_config.py  run_all_evaluations.py  run_eval.py  run_full.py  run_pilot.py
eval/baselines/: __init__.py  cot.py  naive_rag.py  zero_shot.py
eval/cache/: toy-1.json  toy-2.json
inputs/: f1_student_employment.md  startup_legal_requirements.md
lmars/: __init__.py  agents.py  cli.py  evaluate_cli.py  evaluation.py  graph.py  llm_judge.py  pipeline_runner.py  result_logger.py  trajectory_tracker.py  workflow.py
lmars/tools/: __init__.py  courtlistener_tool.py  offline_rag_tool.py  serper_search_tool.py  tavily_search_tool.py
prompts/: barexam_system_prompt.txt  barexam_template.txt  llm_judge.txt  summary_template.txt
run/: single_turn_pipeline.py
test/: __init__.py  example_trajectory_usage.py  results_viewer.py  test_clarification_flow.py  test_query_agent.py  test_run.py  test_trajectory_system.py  test_workflow.py
